correct and wrong answers color, reload button js

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <p class="subtitle">Test your knowledge with our Quiz App!</p>
             </div>
             <div class="result hide">
-                <p>Your Score is 5/5 !</p>
+                <p></p>
                 <p class="reload">
-                    <button>Try again?</button>
+                    <button onclick="document.location.reload(true)">Try again?</button>
                 </p>
             </div>
             <form action="" class="quiz-form">
