real questions applied to the LazyQuiz

--- a/index.html
+++ b/index.html
@@ -24,98 +24,105 @@
             </div>
             <form action="" class="quiz-form">
                 <div class="question">
-                    <p>1. Lorem ipsum dolor sit amet.</p>
+                    <p>Q1 : What does the "DOM" stand for in JavaScript?</p>
                     <div class="option">
                         <input type="radio" name="q1" value="A" checked>
-                        <label for="">A</label>
+                        <label for="">A : Document Object Model</label>
                     </div>
                     <div class="option">
                         <input type="radio" name="q1" value="B">
-                        <label for="">B</label>
+                        <label for="">B : Data Object Model
+                        </label>
                     </div>
                     <div class="option">
                         <input type="radio" name="q1" value="C">
-                        <label for="">C</label>
+                        <label for="">C : Dynamic Object Manipulation</label>
                     </div>
                     <div class="option">
                         <input type="radio" name="q1" value="D">
-                        <label for="">B</label>
+                        <label for="">D : Document of Operations Management</label>
                     </div>
                 </div>
                 <div class="question">
-                    <p>2. Lorem ipsum dolor sit amet.</p>
+                    <p>Q2 : How can you declare a variable in JavaScript?</p>
                     <div class="option">
                         <input type="radio" name="q2" value="A" checked>
-                        <label for="">A</label>
+                        <label for="">A : var myVar = 5;</label>
                     </div>
                     <div class="option">
                         <input type="radio" name="q2" value="B">
-                        <label for="">B</label>
+                        <label for="">B : int myVar = 5;
+                        </label>
                     </div>
                     <div class="option">
                         <input type="radio" name="q2" value="C">
-                        <label for="">C</label>
+                        <label for="">C : variable myVar = 5;</label>
                     </div>
                     <div class="option">
                         <input type="radio" name="q2" value="D">
-                        <label for="">B</label>
+                        <label for="">D : let myVar = 5;</label>
                     </div>
                 </div>
                 <div class="question">
-                    <p>3. Lorem ipsum dolor sit amet.</p>
+                    <p>Q3 : Which function is used to add an HTML element to the DOM in JavaScript?</p>
                     <div class="option">
                         <input type="radio" name="q3" value="A" checked>
-                        <label for="">A</label>
+                        <label for="">A : appendChild()</label>
                     </div>
                     <div class="option">
                         <input type="radio" name="q3" value="B">
-                        <label for="">B</label>
+                        <label for="">B : addToDOM()</label>
                     </div>
                     <div class="option">
                         <input type="radio" name="q3" value="C">
-                        <label for="">C</label>
+                        <label for="">C : createNode()
+                        </label>
                     </div>
                     <div class="option">
                         <input type="radio" name="q3" value="D">
-                        <label for="">B</label>
+                        <label for="">D : insertElement()
+                        </label>
                     </div>
                 </div>
                 <div class="question">
-                    <p>4. Lorem ipsum dolor sit amet.</p>
+                    <p>Q4 : What is the purpose of the "return" statement in a JavaScript function?</p>
                     <div class="option">
                         <input type="radio" name="q4" value="A" checked>
-                        <label for="">A</label>
+                        <label for="">A : It prints text to the console.</label>
                     </div>
                     <div class="option">
                         <input type="radio" name="q4" value="B">
-                        <label for="">B</label>
+                        <label for="">B : It declares a new variable.
+                        </label>
                     </div>
                     <div class="option">
                         <input type="radio" name="q4" value="C">
-                        <label for="">C</label>
+                        <label for="">C :  It ends the function and returns a value.</label>
                     </div>
                     <div class="option">
                         <input type="radio" name="q4" value="D">
-                        <label for="">B</label>
+                        <label for="">D : It creates a loop.</label>
                     </div>
                 </div>
                 <div class="question">
-                    <p>5. Lorem ipsum dolor sit amet.</p>
+                    <p>Q5 : Which operator is used for strict equality (both value and type) in JavaScript?</p>
                     <div class="option">
                         <input type="radio" name="q5" value="A" checked>
-                        <label for="">A</label>
+                        <label for="">A :  ==
+                        </label>
                     </div>
                     <div class="option">
                         <input type="radio" name="q5" value="B">
-                        <label for="">B</label>
+                        <label for="">B : !=</label>
                     </div>
                     <div class="option">
                         <input type="radio" name="q5" value="C">
-                        <label for="">C</label>
+                        <label for="">C :  ===
+                        </label>
                     </div>
                     <div class="option">
                         <input type="radio" name="q5" value="D">
-                        <label for="">B</label>
+                        <label for="">D : !==</label>
                     </div>
                 </div>
                 <div class="submit">
