add developer name design an href

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="heading">
                 <p class="title">LazyQuiz App</p>
                 <p class="subtitle">Test your knowledge with our Quiz App!</p>
-                <p>Made by <a href="https://facebook.com/khalidd3v">KhalidD3V</a></p>
+                <p class="subtitle">Made by <a class="link" href="https://facebook.com/khalidd3v">KhalidD3V</a></p>
             </div>
             <div class="result hide">
                 <p></p>
